# p2p

./: LICENSE  README.md  package.json
backend/: Cargo.toml  cargo.toml
backend/src/: main.rs
frontend/: package-lock.json  package.json
src/: App.jsx  main.rs
