[package]
name = "p2p-file-transfer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.6", features = ["multipart"] }
iroh = "0.32.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
bytes = "1.3"
anyhow = "1.0"
